# mitaskem

./: .gitignore  .pre-commit-config.yaml  Dockerfile  JSONformat.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
api/: server.py
api/routers/: annotation.py  avail_check.py  cards.py  code_dataset.py  code_formula.py  code_text.py  debugging.py  evaluation.py  img2latex.py  integration.py  petri.py
api_use_examples/avail_check/: avail_check_example.py
api_use_examples/code_dataset/: bucky_sample.py  code_dataset_example.py
api_use_examples/code_formula/: CHIME_SVIIvR.py  (+2 more)
demo/: .gitignore  ASKEM-Simple-Walkthrough-v1.ipynb  CHIME_SIR_default_model.py  gpt3.py  gromet.py  mit-dec-demo.ipynb  result1.json  result2.json  sample_for_demo.csv  tr_cached_results.csv
demos/: extract_vars_example.ipynb
gromet/: py_src_to_grometFN_JSON.ipynb
legacy/: README.md  formula_code.py  paper_text_extract_grounding.py  table_extract_grounding.py
mitaskem/: __init__.py
src/: CHIME_SIR_while_loop--Gromet-FN-auto.json  api_key.py  concat_cosmos_contents.py  connect.py  dataset_id.py  formula_code.py  gen_metadata_file.py  gen_petri.py  gpt3.py  gpt_interaction.py  gromet.py  gromet_interface.py  gromet_onto.py  img_latex.py  kgmatching.py  link_annos_to_pyacset.py  methods.py  mira_dkg_interface.py  mit-dec-demo.ipynb  mit_extraction.py  mitlink.py  paper_text_extract_grounding.py  params_to_xlsx.py  response_types.py  test_xdd.py  text_param_search.py  text_search.py  util.py  vars_dedup.py  x1--Gromet-FN-auto.json
(+382 files in other folders)
