[project]
name = "mitaskem"
version = "1.1.0"
description = "mit part of askem project"
authors = [ {name="Chunwei Liu", email="chunwei@mit.edu"} ]
readme = "README.md"
requires-python = "~=3.10"

dependencies = [
    "cryptography>=39.0.0",
    "fastapi>=0.100.0",
    "openai~=0.27.8",
    "pandas>=1.5.3",
    "uvicorn>=0.20.0",
    "Pillow>=9.3.0",
    "tqdm>=4.64.1",
    "langchain>=0.0.321",
    "requests>=2.28.1",
    "python-multipart>=0.0.6",
    "tiktoken>=0.4.0",
    "askem_extractions @ git+https://github.com/ml4ai/ASKEM-TA1-DataModel.git@80feba4",
    "aiohttp>=3.8.4",
    "jmespath",
    "pydantic",
    "scikit-learn",
    "Jinja2",

    # dev / notebooks stuff
    "ta1viewer @ git+https://github.com/orm011/ta1viewer.git@main", # debug
    "watchfiles", # for uvicorn hot-reload
    "pytest", # for testing 
    "nbmake", # for testing notebooks
    "pre-commit", # for pre-commit hooks
    "pdfannots @ git+https://github.com/0xabu/pdfannots.git", # extract annotations from pdfs (testing)
]

[tool.setuptools]
packages = ["mitaskem"]


[tool.pytest.ini_options]
# for now only run these tests by default
addopts = '--nbmake'
python_files = ["*.ipynb"]
testpaths = ["demos/2023-10", "demos/2023-07"]